--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Study Clean Code TDD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^26.0.4",
     "@types/node": "^14.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint": "^7.4.0",
@@ -21,7 +22,9 @@
     "eslint-plugin-standard": "^4.0.1",
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
+    "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
+    "ts-jest": "^26.1.1",
     "typescript": "^3.9.6"
   }
 }
