--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Study Clean Code TDD",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "keywords": [],
   "author": "",
