--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Study Clean Code TDD",
   "main": "index.js",
   "scripts": {
+    "check": "npm-check -s -u",
     "test": "jest",
     "test:staged": "jest"
   },
@@ -14,9 +15,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.20",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
     "eslint": "^7.4.0",
-    "eslint-config-standard-with-typescript": "^11.0.0",
+    "eslint-config-standard-with-typescript": "^18.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
