test: ensure SignUpController return 400 if no name is provided

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "check": "npm-check -s -u",
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --passWithNoTest",
+    "test:staged": "jest --passWithNoTest"
   },
   "keywords": [],
   "author": "",
