--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "validator": "^13.1.1"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "eslint": "^7.4.0",
     "eslint-config-standard-with-typescript": "^18.0.2",
